Basic Template Setup

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,5 +2,8 @@
 
 :root {
   --primary-font: "Roboto", sans-serif;
-  --global-background-color: #f0f0f1;
+  --text-color: #202a3b;
+  --accent-text-color: #fff;
+  --background-color: #f0f0f1;
+  --accent-background-color: #202a3b;
 }
