--- a/src/App.scss
+++ b/src/App.scss
@@ -7,9 +7,21 @@
 }
 
 body {
-  height: 100vh;
-  width: 100vw;
-  @include flex-center;
   font-family: var(--primary-font);
-  background-color: var(--global-background-color);
+  color: var(--text-color);
+  background-color: var(--background-color);
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+}
+
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 16px;
 }
