--- a/src/components/Organisms/CountriesTable/CountriesTable.module.scss
+++ b/src/components/Organisms/CountriesTable/CountriesTable.module.scss
@@ -1,3 +1,26 @@
 .countriesTable {
   margin-top: 56px;
+  width: -moz-fit-content;
+  width: fit-content;
+  :global(.table) {
+    th,
+    td {
+      text-align: start;
+      padding: 4px 16px;
+    }
+    th:nth-child(1) {
+      width: 200px;
+    }
+    th:nth-child(2) {
+      width: 500px;
+    }
+    th:nth-child(3) {
+      width: 200px;
+    }
+  }
+  :global(.pagination) {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 24px;
+  }
 }
